Fixed some layout issues when the webpage is in responsive mode.

--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body {
 
 #main_container {
   width: 100%;
-  height: 48em;
+  height: 100%;
   background-color: #1F022F;
   border-radius: 8px;
   display: flex;
@@ -22,14 +22,14 @@ body {
 
 #clock_container {
   width: 100%;
-  height: 25em;
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
 #progress_bar {
-  height: 5em;
+  height: 4em;
   width: 100%;
   background-color: #B14CFE;
   margin: 1em;
@@ -49,6 +49,7 @@ body {
 #controls_container {
   display: flex;
   flex-direction: column;
+  height: 100%;
 }
 
 #settings {
@@ -56,6 +57,7 @@ body {
   color: #D6A0FE;
   flex-direction: column;
   align-items: center;
+  height: 70%;
 }
 
 #settings section {
@@ -109,18 +111,22 @@ button {
   padding: 0.2em;
 }
 
-
-
 @media screen and (max-width: 550px) {
+
+
+  #timerTitle {
+    font-size: 2em;
+  }
+
+
+}
+
+@media screen and (max-width: 830px) {
 
   #timerControls {
     flex-direction: column;
   }
 
-  #timerTitle {
-    color: #D6A0FE;
-    font-size: 2em;
-  }
 
   #progress_bar {
     margin: 0.5em;
@@ -128,7 +134,7 @@ button {
   }
 
   #timerControls button {
-    width: 3em;
+    width: 100%;
   }
 
 
